<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="casual"
            android:text="@string/choose_game"
            android:textStyle="bold"
            android:textSize="35sp"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            />

        <Button
            android:id="@+id/btnJamb"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="casual"
            android:text="@string/jamb"
            android:textStyle="bold"
            android:textSize="35sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:textColor="#3F4041"
            />

        <Button
            android:id="@+id/btnBlackJack"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="casual"
            android:text="@string/blackjack"
            android:textStyle="bold"
            android:textSize="35sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:textColor="#3F4041"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>